--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,16 @@
+version: '3.8'
 services:
+  db:
+    image: postgres:15
+    environment:
+      POSTGRES_DB: restshop
+      POSTGRES_USER: roos
+      POSTGRES_PASSWORD: roos
+    ports:
+      - "5432:5432"
+    volumes:
+      - pgdata:/var/lib/postgresql/data
 
 volumes:
   pgdata:
+
