--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Spring datasource (production/dev)
-spring.datasource.url=jdbc:postgresql://localhost:5432/marshal
+spring.datasource.url=jdbc:postgresql://localhost:5432/restshop
 spring.datasource.username=roos
-spring.datasource.password=jimbo123
+spring.datasource.password=roos
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=false
