--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Spring datasource (production/dev)
-spring.datasource.url=jdbc:postgresql://localhost:5432/restshop
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/restshop
 spring.datasource.username=roos
 spring.datasource.password=roos
 spring.jpa.hibernate.ddl-auto=update
